# found-haikus

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
haiku/: __init__.py  db.py  firehose.py  main.py  matcher.py  server.py  syllables.py
scripts/: publish_feed.py  start.sh
tests/: test_db.py  test_firehose.py  test_matcher.py  test_server.py  test_syllables.py
