[project]
name = "haiku"
version = "0.1.0"
description = "Bluesky custom feed that assembles haikus from posts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.55",
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
    "syllables @ git+https://github.com/dfm/syllables.git@a2fa24baaad9db29b1faee9e98198026a800aca0",
]

[project.scripts]
haiku = "haiku.main:main"
haiku-serve = "haiku.server:serve"

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
